@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Perl-Repository-APC
-version:             2.000_000279
+version:             2.000_000282
 abstract:            ~
 license:             perl
 author:              ~
@@ -12,6 +12,7 @@ requires:
     List::Util:                    0
     Module::CoreList:              2.13
     Test::More:                    0
+    version:                       0.74
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
